--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
-				<version>${vaadin.version}</version>
+				<version>8.8.1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -93,7 +93,7 @@
 			<plugin>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-maven-plugin</artifactId>
-				<version>${vaadin.plugin.version}</version>
+				<version>8.0.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -129,10 +129,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.plugin.version}</version>
-				<configuration>
-					<scanIntervalSeconds>2</scanIntervalSeconds>
-				</configuration>
+				<version>9.4.18.v20190429</version>
 			</plugin>
 		</plugins>
 	</build>
