--- a/taskdb/db.properties
+++ b/taskdb/db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Wed May 22 16:20:22 GMT+04:00 2019
+#Wed May 22 23:13:57 GMT+04:00 2019
 version=2.3.2
-modified=yes
+modified=no
