--- a/taskdb/db.properties
+++ b/taskdb/db.properties
@@ -1,4 +1,5 @@
-#HSQL Database Engine 2.3.2
-#Wed May 22 23:13:57 GMT+04:00 2019
-version=2.3.2
-modified=no
+#HSQL Database Engine 2.4.1
+#Fri May 24 15:25:13 GMT+04:00 2019
+version=2.4.1
+modified=yes
+tx_timestamp=0
